--- a/src/index.html
+++ b/src/index.html
@@ -13,201 +13,236 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container">
-      <!-- Main Container Start -->
-      <div class="card text-center">
-        <div class="card-header">
-          <h2>Payment Form</h2>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">
-            <div class="alert alert-danger d-none" role="alert">
-              Some Fields Are Missing
-            </div>
-          </h5>
-          <p class="card-text"></p>
-          <div class="form-row">
-            <div class="form-group col-md-4">
-              <label for="inputEmail4">Card #</label>
-              <input
-                type="email"
-                class="form-control"
-                id="inputEmail4"
-                placeholder="Card"
-              />
-            </div>
-            <div class="form-group col-md-4">
-              <label for="inputPassword4">CVC #</label>
-              <input
-                type="password"
-                class="form-control"
-                id="inputPassword4"
-                placeholder="CVC"
-              />
-            </div>
-            <div class="form-group col-md-4">
-              <label for="validationDefaultUsername">Amount</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="inputGroupPrepend2"
-                    >$</span
-                  >
+    <form
+      name="myForm"
+      action="/action_page.php"
+      onsubmit="return validateForm()"
+      method="post"
+      required
+    >
+      <div class="container">
+        <!-- Main Container Start -->
+        <div class="card text-center">
+          <div class="card-header">
+            <h2>Payment Form</h2>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              <div class="alert alert-danger d-none" role="alert">
+                Some Fields Are Missing
+              </div>
+            </h5>
+            <p class="card-text"></p>
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="inputEmail4">Card #</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="inputEmail4"
+                  placeholder="Card"
+                  name="fname"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPassword4">CVC #</label>
+                <input
+                  name="aname"
+                  type="password"
+                  class="form-control"
+                  id="inputPassword4"
+                  placeholder="CVC"
+                  name="aname"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label for="validationDefaultUsername">Amount</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupPrepend2"
+                      >$</span
+                    >
+                  </div>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="validationDefaultUsername"
+                    placeholder=""
+                    aria-describedby="inputGroupPrepend2"
+                    required
+                    name="bname"
+                  />
                 </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <label for="fname">First name</label><br />
                 <input
                   type="text"
                   class="form-control"
-                  id="validationDefaultUsername"
-                  placeholder=""
-                  aria-describedby="inputGroupPrepend2"
-                  required
+                  placeholder="First name"
+                  name="cname"
+                />
+              </div>
+              <div class="col">
+                <label for="lname">Last Name</label><br />
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Last name"
+                  name="dname"
                 />
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <label for="fname">First name</label><br />
-              <input
-                type="text"
-                class="form-control"
-                placeholder="First name"
-              />
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">City</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="inputCity"
+                  name="ename"
+                />
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputState">State</label>
+                <select id="inputState" class="form-control">
+                  <option selected>Choose...</option>
+                  <option value="AL">Alabama</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="CT">Connecticut</option>
+                  <option value="DE">Delaware</option>
+                  <option value="DC">District Of Columbia</option>
+                  <option value="FL">Florida</option>
+                  <option value="GA">Georgia</option>
+                  <option value="HI">Hawaii</option>
+                  <option value="ID">Idaho</option>
+                  <option value="IL">Illinois</option>
+                  <option value="IN">Indiana</option>
+                  <option value="IA">Iowa</option>
+                  <option value="KS">Kansas</option>
+                  <option value="KY">Kentucky</option>
+                  <option value="LA">Louisiana</option>
+                  <option value="ME">Maine</option>
+                  <option value="MD">Maryland</option>
+                  <option value="MA">Massachusetts</option>
+                  <option value="MI">Michigan</option>
+                  <option value="MN">Minnesota</option>
+                  <option value="MS">Mississippi</option>
+                  <option value="MO">Missouri</option>
+                  <option value="MT">Montana</option>
+                  <option value="NE">Nebraska</option>
+                  <option value="NV">Nevada</option>
+                  <option value="NH">New Hampshire</option>
+                  <option value="NJ">New Jersey</option>
+                  <option value="NM">New Mexico</option>
+                  <option value="NY">New York</option>
+                  <option value="NC">North Carolina</option>
+                  <option value="ND">North Dakota</option>
+                  <option value="OH">Ohio</option>
+                  <option value="OK">Oklahoma</option>
+                  <option value="OR">Oregon</option>
+                  <option value="PA">Pennsylvania</option>
+                  <option value="RI">Rhode Island</option>
+                  <option value="SC">South Carolina</option>
+                  <option value="SD">South Dakota</option>
+                  <option value="TN">Tennessee</option>
+                  <option value="TX">Texas</option>
+                  <option value="UT">Utah</option>
+                  <option value="VT">Vermont</option>
+                  <option value="VA">Virginia</option>
+                  <option value="WA">Washington</option>
+                  <option value="WV">West Virginia</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WY">Wyoming</option>
+                  <option value="AS">American Samoa</option>
+                  <option value="GU">Guam</option>
+                  <option value="MP">Northern Mariana Islands</option>
+                  <option value="PR">Puerto Rico</option>
+                  <option value="UM"
+                    >United States Minor Outlying Islands</option
+                  >
+                  <option value="VI">Virgin Islands</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label for="inputZip">Postal Code</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="inputZip"
+                  name="vname"
+                />
+              </div>
             </div>
-            <div class="col">
-              <label for="lname">Last Name</label><br />
-              <input type="text" class="form-control" placeholder="Last name" />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="inputCity">City</label>
-              <input type="text" class="form-control" id="inputCity" />
-            </div>
-            <div class="form-group col-md-4">
-              <label for="inputState">State</label>
-              <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
-                <option value="AL">Alabama</option>
-                <option value="AK">Alaska</option>
-                <option value="AZ">Arizona</option>
-                <option value="AR">Arkansas</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DE">Delaware</option>
-                <option value="DC">District Of Columbia</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="HI">Hawaii</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="IA">Iowa</option>
-                <option value="KS">Kansas</option>
-                <option value="KY">Kentucky</option>
-                <option value="LA">Louisiana</option>
-                <option value="ME">Maine</option>
-                <option value="MD">Maryland</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MI">Michigan</option>
-                <option value="MN">Minnesota</option>
-                <option value="MS">Mississippi</option>
-                <option value="MO">Missouri</option>
-                <option value="MT">Montana</option>
-                <option value="NE">Nebraska</option>
-                <option value="NV">Nevada</option>
-                <option value="NH">New Hampshire</option>
-                <option value="NJ">New Jersey</option>
-                <option value="NM">New Mexico</option>
-                <option value="NY">New York</option>
-                <option value="NC">North Carolina</option>
-                <option value="ND">North Dakota</option>
-                <option value="OH">Ohio</option>
-                <option value="OK">Oklahoma</option>
-                <option value="OR">Oregon</option>
-                <option value="PA">Pennsylvania</option>
-                <option value="RI">Rhode Island</option>
-                <option value="SC">South Carolina</option>
-                <option value="SD">South Dakota</option>
-                <option value="TN">Tennessee</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VT">Vermont</option>
-                <option value="VA">Virginia</option>
-                <option value="WA">Washington</option>
-                <option value="WV">West Virginia</option>
-                <option value="WI">Wisconsin</option>
-                <option value="WY">Wyoming</option>
-                <option value="AS">American Samoa</option>
-                <option value="GU">Guam</option>
-                <option value="MP">Northern Mariana Islands</option>
-                <option value="PR">Puerto Rico</option>
-                <option value="UM">United States Minor Outlying Islands</option>
-                <option value="VI">Virgin Islands</option>
-              </select>
-            </div>
-            <div class="form-group col-md-2">
-              <label for="inputZip">Postal Code</label>
-              <input type="text" class="form-control" id="inputZip" />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-3">
-              <label for="payment-op">We Accept:</label>
-              <button
-                type="button"
-                class="btn btn-secondary form-control"
-                id="payment-op"
-              >
-                <form action="/action_page.php">
-                  <input
-                    type="radio"
-                    id="mastercard"
-                    name="payment"
-                    value="male"
-                  />
-                  <i class="fab fa-cc-mastercard"></i>
-                  <input type="radio" id="visa" name="payment" value="female" />
-                  <i class="fab fa-cc-visa"></i>
-                  <input
-                    type="radio"
-                    id="paypal"
-                    name="payment"
-                    value="other"
-                  />
-                  <i class="fab fa-cc-paypal"></i>
-                  <input
-                    type="radio"
-                    id="amexpress"
-                    name="payment"
-                    value="other"
-                  />
-                  <i class="fab fa-cc-amex"></i>
-                </form>
-              </button>
-            </div>
-            <div class="form-group col-md-3"></div>
-            <div class="form-group col-md-6">
-              <label for="Message">Message</label>
-              <textarea
-                name="message"
-                rows="4"
-                col="20"
-                id="Message"
-                class="form-control"
-              >
-              </textarea>
+            <div class="form-row">
+              <div class="form-group col-md-3">
+                <label for="payment-op">We Accept:</label>
+                <button
+                  type="button"
+                  class="btn btn-secondary form-control"
+                  id="payment-op"
+                >
+                  <form action="/action_page.php">
+                    <input
+                      type="radio"
+                      id="mastercard"
+                      name="payment"
+                      value="male"
+                    />
+                    <i class="fab fa-cc-mastercard"></i>
+                    <input
+                      type="radio"
+                      id="visa"
+                      name="payment"
+                      value="female"
+                    />
+                    <i class="fab fa-cc-visa"></i>
+                    <input
+                      type="radio"
+                      id="paypal"
+                      name="payment"
+                      value="other"
+                    />
+                    <i class="fab fa-cc-paypal"></i>
+                    <input
+                      type="radio"
+                      id="amexpress"
+                      name="payment"
+                      value="other"
+                    />
+                    <i class="fab fa-cc-amex"></i>
+                  </form>
+                </button>
+              </div>
+              <div class="form-group col-md-3"></div>
+              <div class="form-group col-md-6">
+                <label for="Message">Message</label>
+                <textarea
+                  name="message"
+                  rows="4"
+                  col="20"
+                  id="Message"
+                  class="form-control"
+                >
+                </textarea>
+              </div>
             </div>
           </div>
         </div>
+        <div class="card-footer d-flex justify-content-end">
+          <button type="button" class="btn btn-secondary btn-lg">Cancel</button>
+          <button type="button" onclick="Send()" class="btn btn-primary btn-lg">
+            Send
+          </button>
+        </div>
       </div>
-      <div class="card-footer d-flex justify-content-end">
-        <button type="button" class="btn btn-secondary btn-lg">Cancel</button>
-        <button type="button" onclick="Send()" class="btn btn-primary btn-lg">
-          Send
-        </button>
-      </div>
-    </div>
+    </form>
     <!-- Main Container Start -->
   </body>
 </html>
