--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">
-              <div class="alert alert-danger d-none" role="alert">
+              <div class="alert alert-danger d-none" id="alert" role="alert">
                 Some Fields Are Missing
               </div>
             </h5>
@@ -108,7 +108,7 @@
               <div class="form-group col-md-4">
                 <label for="inputState">State</label>
                 <select id="inputState" class="form-control">
-                  <option selected>Choose...</option>
+                  <option value="0" selected>Choose...</option>
                   <option value="AL">Alabama</option>
                   <option value="AK">Alaska</option>
                   <option value="AZ">Arizona</option>
