--- a/src/index.html
+++ b/src/index.html
@@ -188,36 +188,29 @@
                   class="btn btn-secondary form-control"
                   id="payment-op"
                 >
-                  <form action="/action_page.php">
-                    <input
-                      type="radio"
-                      id="mastercard"
-                      name="payment"
-                      value="male"
-                    />
-                    <i class="fab fa-cc-mastercard"></i>
-                    <input
-                      type="radio"
-                      id="visa"
-                      name="payment"
-                      value="female"
-                    />
-                    <i class="fab fa-cc-visa"></i>
-                    <input
-                      type="radio"
-                      id="paypal"
-                      name="payment"
-                      value="other"
-                    />
-                    <i class="fab fa-cc-paypal"></i>
-                    <input
-                      type="radio"
-                      id="amexpress"
-                      name="payment"
-                      value="other"
-                    />
-                    <i class="fab fa-cc-amex"></i>
-                  </form>
+                  <input
+                    type="radio"
+                    id="mastercard"
+                    name="payment"
+                    value="male"
+                  />
+                  <i class="fab fa-cc-mastercard"></i>
+                  <input type="radio" id="visa" name="payment" value="female" />
+                  <i class="fab fa-cc-visa"></i>
+                  <input
+                    type="radio"
+                    id="paypal"
+                    name="payment"
+                    value="other"
+                  />
+                  <i class="fab fa-cc-paypal"></i>
+                  <input
+                    type="radio"
+                    id="amexpress"
+                    name="payment"
+                    value="other"
+                  />
+                  <i class="fab fa-cc-amex"></i>
                 </button>
               </div>
               <div class="form-group col-md-3"></div>
