--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,7 @@
                   class="form-control"
                   placeholder="First name"
                   name="cname"
+                  id="firstn"
                 />
               </div>
               <div class="col">
@@ -92,6 +93,7 @@
                   class="form-control"
                   placeholder="Last name"
                   name="dname"
+                  id="secondn"
                 />
               </div>
             </div>
