--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
                   id="inputEmail4"
                   placeholder="Card"
                   name="fname"
+                  required
                 />
               </div>
               <div class="form-group col-md-4">
@@ -53,6 +54,7 @@
                   id="inputPassword4"
                   placeholder="CVC"
                   name="aname"
+                  required
                 />
               </div>
               <div class="form-group col-md-4">
@@ -71,6 +73,7 @@
                     aria-describedby="inputGroupPrepend2"
                     required
                     name="bname"
+                    required
                   />
                 </div>
               </div>
@@ -84,6 +87,7 @@
                   placeholder="First name"
                   name="cname"
                   id="firstn"
+                  required
                 />
               </div>
               <div class="col">
@@ -94,6 +98,7 @@
                   placeholder="Last name"
                   name="dname"
                   id="secondn"
+                  required
                 />
               </div>
             </div>
@@ -105,11 +110,12 @@
                   class="form-control"
                   id="inputCity"
                   name="ename"
+                  required
                 />
               </div>
               <div class="form-group col-md-4">
                 <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
+                <select id="inputState" class="form-control" required>
                   <option value="0" selected>Choose...</option>
                   <option value="AL">Alabama</option>
                   <option value="AK">Alaska</option>
@@ -179,6 +185,7 @@
                   class="form-control"
                   id="inputZip"
                   name="vname"
+                  required
                 />
               </div>
             </div>
